# generic-ml-wrapper

./: .coveragerc  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  hatch_build.py  noxfile.py  pyproject.toml  pyrightconfig.json  sonar-project.properties
.github/workflows/: ci.yml  pr-hygiene.yml  release.yml  sonar.yml
docs/: CLI.md  CLIENTS.md  CONFIGURATION.md  DESIGN.md  TROUBLESHOOTING.md  USER_GUIDE.md  WORKFLOWS.md
docs/tapes/: README.md  render.sh  seed.py  statusline.tape  usage.tape
src/generic_ml_wrapper/: __init__.py
src/generic_ml_wrapper/adapter/: __init__.py
src/generic_ml_wrapper/adapter/inbound/: __init__.py
src/generic_ml_wrapper/adapter/inbound/cli/: __init__.py  app.py  banner.py  help_topics.py  hints.py  index.py
src/generic_ml_wrapper/adapter/inbound/tui/: __init__.py  banner.py  menu_app.py  spike_app.py
src/generic_ml_wrapper/adapter/outbound/: __init__.py
src/generic_ml_wrapper/adapter/outbound/bootstrap/: __init__.py  about.py  filesystem_axis_catalog.py  filesystem_layout_migrator.py  filesystem_layout_seeder.py  filesystem_slug_migrator.py  http_client_versions.py  path_client_detector.py  subprocess_command_runner.py  system_clipboard.py  tty_axis_chooser.py  tty_client_chooser.py  tty_client_setup.py  tty_guided_chooser.py  tty_language_chooser.py  tty_persona_chooser.py  tty_prompt.py  tty_text_prompt.py  tty_workflow_chooser.py
src/generic_ml_wrapper/adapter/outbound/caller/: __init__.py  claude_cli_caller.py  codex_cli_caller.py  context_file.py  context_opening.py  cursor_cli_caller.py  default_provider.py  loader.py  status_line_config.py  vibe_cli_caller.py  vibe_config.py
src/generic_ml_wrapper/adapter/outbound/compress/: __init__.py  cache_backed_compressor.py
src/generic_ml_wrapper/adapter/outbound/config/: __init__.py  tomlkit_config_writer.py
src/generic_ml_wrapper/adapter/outbound/credentials/: __init__.py  filesystem_credentials_store.py
src/generic_ml_wrapper/adapter/outbound/gateway/: __init__.py  anthropic_sse.py  openai_chat.py  openai_responses.py  relay.py
src/generic_ml_wrapper/adapter/outbound/hook/: __init__.py  session_logger.py
src/generic_ml_wrapper/adapter/outbound/interceptor/: __init__.py  compressor.py  size_logger.py
src/generic_ml_wrapper/adapter/outbound/persona/: __init__.py  filesystem_persona_source.py
src/generic_ml_wrapper/adapter/outbound/plugin/: __init__.py  filesystem_plugin_source.py
src/generic_ml_wrapper/adapter/outbound/status/: __init__.py  claude_status_parser.py  cursor_status_parser.py
src/generic_ml_wrapper/application/: __init__.py
src/generic_ml_wrapper/application/domain/: __init__.py
src/generic_ml_wrapper/application/port/: __init__.py
src/generic_ml_wrapper/application/usecase/: __init__.py  bootstrap.py  check_client_ready.py  create_axis.py  edit_workflow.py  export_usage.py  first_run_init.py  init.py  launch.py  list_clients.py  list_jobs.py  list_personas.py  list_plugins.py  list_sessions.py  list_workflows.py  migrate_layout.py  migrate_slugs.py  new_workflow.py  render_greeting.py  render_statusline.py  save_usage_report.py  set_credential.py  start_job.py  update_config.py
src/generic_ml_wrapper/application/wiring/: __init__.py  composition.py
src/generic_ml_wrapper/common/: __init__.py  config.py  fs_time.py  i18n.py  log.py  paths.py  settings_registry.py  slug.py  spec_loader.py
src/generic_ml_wrapper/resources/i18n/: en.json  fr.json
src/generic_ml_wrapper/resources/personas/: _floor.md  butler.md  companion.md  mentor.md  plain.md  terse.md
tests/: _conformance.py  conftest.py  test_anthropic_sse.py  test_authoring_separation.py  test_banner.py  test_bootstrap.py  test_cache_backed_compressor.py  test_caller_loader.py  test_callers.py  test_check_client_ready.py  test_cli.py  test_client_catalog.py  test_client_versions.py  test_compressor.py  test_config.py  test_context_file.py  test_context_source.py  test_create_axis.py  test_credentials_store.py  test_cursor_status_parser.py  test_docs_consistency.py  test_edit_workflow_usecase.py  test_exit_handling.py  test_export_usage_usecase.py  test_filesystem_axis_catalog.py  test_filesystem_persona_source.py  test_filesystem_plugin_source.py  test_filesystem_transcript_store.py  test_filesystem_workflow_source.py  test_first_run_init.py  test_greeting.py  test_hook_runner.py  test_i18n.py  test_identifiers.py  test_init_usecase.py  test_interceptor_chain.py  test_layout_migrator.py  test_learned.py  test_ledger_migration.py  test_list_clients.py  (+47 more)
tools/hooks/: check-commit-msg.sh  guard-branch.sh
(+94 files in other folders)
